# NexusStream-Enterprise-QA

./: README.MD  pyproject.toml
nexusstream-qa/: README.md  api_client.py  main.py  pyproject.toml  pytest.ini  requirements.txt
nexusstream-qa/.auth/: state.json
nexusstream-qa/allure-results/: 00121917-412b-4b8f-b211-f7032b169ff2-container.json  00152644-dcc8-40dc-acae-fa8587e8786f-container.json  0031ea60-d505-48e5-bced-9229d3e1bc2c-container.json  00a53b7c-31e2-4238-8807-63cdaf1a9f41-container.json  0107e3ab-fe2e-4633-ba25-112138fac2da-container.json  015c730b-cbb7-4512-8d15-24a89f445ff9-result.json  019dc5f1-64d2-4043-8726-0647643b503a-container.json  01a84591-e7ce-4fa0-ac34-9822a90507bd-container.json  02109727-3325-4772-99ef-b27e4c368441-result.json  0215bdc6-320a-4aaf-9fc5-a6b0377f11bd-container.json  0234797c-39eb-4f28-867c-e0a62885ac8a-result.json  02730444-d59c-4a50-8e84-bf0b3a1468e2-container.json  0274c9c0-19ba-4576-b914-9dbf8d28f37d-container.json  0274f0e6-cee9-4bec-a568-f9bf68a14d21-container.json  02d2442b-d1db-435f-9c8e-023a237362ca-container.json  032e541e-f334-4114-aa27-50ce9824c4e5-container.json  033e7d46-6ce8-4c8f-b61d-acb94767d07e-container.json  0358cf1f-c27a-4b1a-a462-2f4d60f4fd12-container.json  03945471-f984-4ba2-aa65-bc4a2c168e3a-container.json  03b8963f-acb6-4b7b-b38a-bc7a3f0b1c40-container.json  03be1dcc-75b8-4a8e-9bcf-4c160ed6093a-container.json  03de158a-3d35-4ef0-a056-4ddd4e95e3b1-container.json  03e6819b-d972-464d-baaf-e2aab82dd0a1-container.json  040ca480-cbce-46dd-903c-fe1334f23862-container.json  (+1078 more)
nexusstream-qa/core/: base_page.py  (+4 more)
(+38 files in other folders)
