[project]
name = "nexusstream-qa"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "responses>=0.25.0",
    "allure-pytest>=2.13.2",
    "playwright>=1.58.0",
    "pytest-base-url>=2.1.0",
    "pydantic>=2.12.5",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "nexusstream-qa"
