[project]
name = "nexusstream-enterprise-qa"
version = "0.1.0"
description = "Enterprise UI Test Suite using Playwright"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.3",
    "playwright>=1.42.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=12.0",
    "allure-pytest>=2.13.2",
    "pytest-sugar>=1.1.1"
]